--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,8 @@
   <h3>Pages</h3>
   <hr>
   <ul class="list-unstyled">
-    {% for article in articles %}
-        <li><b><a href="/wiki/{{article.title}}">{{article.title}}</a></b><br><span><a href="/wiki/{{article.dataValues.utlTitle}}">{{article.dataValues.utlTitle}}</a></span>
+    {% for article in articles%}
+        <li><b><a href="/wiki/{{article.title}}">{{article.title}}</a></b><br><span><a href="/wiki/{{article.urlTitle}}">{{article.urlTitle}}</a></span>
     </li><br> {% endfor %}
     <!-- PLACEHOLDER LIST OF PAGES -->
   </ul>
