--- a/views/addpage.html
+++ b/views/addpage.html
@@ -9,17 +9,17 @@
 <div>
     <!-- <div>PLACEHOLDER FOR AUTHOR NAME FIELD</div>  -->
     <div class="form-group">
-      <label for="authorName" class="col-sm-2 control-label">Author Name</label>
+      <label for="name" class="col-sm-2 control-label">Author Name</label>
       <div class="col-sm-10">
-        <input name="authorName" type="text" class="form-control"/>
+        <input name="name" type="text" class="form-control"/>
       </div>
     </div>
 
     <!-- <div>PLACEHOLDER FOR AUTHOR EMAIL FIELD</div> -->
     <div class="form-group">
-      <label for="authorEmail" class="col-sm-2 control-label">Author Email</label>
+      <label for="email" class="col-sm-2 control-label">Author Email</label>
       <div class="col-sm-10">
-        <input name="authorEmail" type="text" class="form-control"/>
+        <input name="email" type="text" class="form-control"/>
       </div>
     </div>
 
@@ -32,17 +32,17 @@
 
     <!-- <div>PLACEHOLDER FOR PAGE CONTENT TEXTAREA FIELD</div> -->
     <div class="form-group">
-      <label for="contents" class="col-sm-2 control-label">Page Contents</label>
+      <label for="content" class="col-sm-2 control-label">Page Contents</label>
       <div class="col-lg-10">
-        <input name="contents" type="text" class="form-control"/>
+        <input name="content" type="text" class="form-control"/>
       </div>
     </div>
 
     <!-- <div>PLACEHOLDER FOR PAGE STATUS INPUT FIELD</div> -->
     <div class="form-group">
-      <label for="pageStatus" class="col-sm-2 control-label">Page Status</label>
+      <label for="status" class="col-sm-2 control-label">Page Status</label>
       <div class="col-sm-10">
-        <input name="pageStatus" type="text" class="form-control"/>
+        <input name="status" type="text" class="form-control"/>
       </div>
     </div>
 
